  longer required. (Armin Braun)

Bug Fixes
---------------------

* GITHUB#13384: Fix highlighter to use longer passages instead of shorter individual terms. (Zack Kendall)

* GITHUB#13463: Address bug in MultiLeafKnnCollector causing #minCompetitiveSimilarity to stay artificially low in
  some corner cases. (Greg Miller)

Other
--------------------
(No changes)

======================== Lucene 9.11.1 =======================

Bug Fixes
---------------------

* GITHUB#13498: Avoid performance regression by constructing lazily the PointTree in NumericComparator. (Ignacio Vera)

* GITHUB#13501, GITHUB#13478: Remove intra-merge parallelism for everything except HNSW graph merges. (Ben Trent)

* GITHUB#13498, GITHUB#13340: Allow adding a parent field to an index with no fields (Michael Sokolov)

* GITHUB#12431: Fix IndexOutOfBoundsException thrown in DefaultPassageFormatter
  by unordered matches. (Stephane Campinas)

* GITHUB#13493: StringValueFacetCounts stops throwing NPE when faceting over an empty match-set. (Grebennikov Roman,
  Stefan Vodita)


======================== Lucene 9.11.0 =======================

API Changes
---------------------

* GITHUB#13145: Deprecate ByteBufferIndexInput as it will be removed in Lucene 10.0. (Uwe Schindler)

* GITHUB#13422: an explicit dependency on the HPPC library is removed in favor of an internal repackaged copy in
  oal.internal.hppc. If you relied on HPPC as a transitive dependency, you'll have to add it to your project explicitly.
  The HPPC classes now bundled in Lucene core are internal and will have restricted access in future releases, please do
  not use them. (Bruno Roustant, Dawid Weiss, Uwe Schindler, Chris Hegarty)

New Features
---------------------

* GITHUB#13125: Recursive graph bisection is now supported on indexes that have blocks, as long as
  they configure a parent field via `IndexWriterConfig#setParentField`. (Adrien Grand)
